# src/main/java/com/notifyme/delegate/CondominioApiDelegateImpl.java
@@ -1,13 +1,11 @@
 package com.notifyme.delegate;
 
 import com.notifyme.controller.CondominioApiDelegate;
-import com.notifyme.mapper.CondominioMapper;
-import com.notifyme.model.CondominioRequestDTO;
-import com.notifyme.persistence.Condominio;
-import com.notifyme.persistence.Usuario;
+import com.notifyme.model.CondominioBaseRequestDTO;
+import com.notifyme.security.TokenService;
 import com.notifyme.services.CondominioService;
-import com.notifyme.services.UsuarioService;
 import lombok.RequiredArgsConstructor;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -17,12 +15,14 @@ import org.springframework.stereotype.Service;
 public class CondominioApiDelegateImpl implements CondominioApiDelegate {
 
     private final CondominioService condominioService;
-    private final UsuarioService usuarioService;
+    private final TokenService tokenService;
 
-    public ResponseEntity<Void> postCondominioV1(CondominioRequestDTO condominioRequestDTO) {
-        Usuario usuario = usuarioService.findById(condominioRequestDTO.getUsuarioId());
-        Condominio condominio = CondominioMapper.INSTANCE.convert(condominioRequestDTO);
-        condominioService.newCondominio(usuario, condominio);
+    @Override
+    public ResponseEntity<Void> putCondominioV1(String authorization,
+                                                 CondominioBaseRequestDTO condominioBaseRequestDTO) {
+
+        Integer condominioId = tokenService.extractCondominioIdFromToken(authorization);
+        condominioService.updateCondominio(condominioId, condominioBaseRequestDTO);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 }
